--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <html>
-  <head>
-  <title>
-    </title>
-  </head>
-  <body>
+<head>
+<title>
+</title>
+</head>
+<body>
+<table border>
+	<tr>
+	<th>№ з/п</th>
+	<th>Найменування товару</th>
+	<th>Од.вим.</th>
+	<th>Кількість</th>
+	<th>Ціна за од.,грн.Випуск</th>
+	<th>Вартість,грн.</th>
+	</tr>
+	<tr>
+	<td align="right">1.</td>
+	<td>Томати свіжі</td>
+	<td>кг</td>
+	<td align="right">5</td>
+	<td align="right">40</td>
+	<td align="right">200</td>
+	</tr>
+	<tr>
+	<td align="right">2.</td>
+	<td>Огірки свіжі</td>
+	<td>кг</td>
+	<td align="right">8</td>
+	<td align="right">32</td>
+	<td align="right">256</td>
+	</tr>
+	<tr>
+	<td colspan="5">РАЗОМ:</td>
+	<td align="right">456</td>
+	</tr>
+  </body>
+  </html>
     
