--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 	<td colspan="5">РАЗОМ:</td>
 	<td align="right">456</td>
 	</tr>
+	<tr>
+	<td colspan="5">РАЗОМ:</td>
+	<td align="right">456</td>
+	</tr>
   </body>
   </html>
     
